AndroidAsmt/app/src/main/java/com/example/androidasmt/network/error/ForgotPasswordError.kt
package com.example.androidasmt.network.error

import com.google.gson.annotations.SerializedName

data class ForgotPasswordError(
    @SerializedName("Username")
    val username: List<String>?
)